# vectorized-particle-swarm

./: .cmd  .mypy.ini  .numba_config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-tests.txt  setup.py
.github/workflows/: ci.yml
examples/: constrained_example.py  simple_example.py
src/vpso/: __init__.py  adaptation.py  ask_and_tell.py  initialization.py  jit.py  math.py  math2.c  math2.html  math2.pyx  mutation.py  reparation.py  termination.py  typing.py  vpso.py  vpso_constrained.py
tests/: test_adaptation.py  test_initialization.py  test_math.py  test_mutation.py  test_numerical.py  test_numerical_constrained.py  test_reparation.py
