[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpso"
version = "1.0.0"
authors = [
  { name="Filippo Airaldi", email="filippoairaldi@gmail.com" },
]
description = "Multiple Particle Swarm Optimization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "numba >= 0.57.0",
    "scipy >= 1.10.1",
    "typing_extensions >= 4.6.3",
]

[project.urls]
"Homepage" = "https://github.com/FilippoAiraldi/vectorized-particle-swarm"
"Bug Tracker" = "https://github.com/FilippoAiraldi/vectorized-particle-swarm/issues"

[tool.setuptools]
license-files = [
	"LICENSE",
]

[tool.isort]
profile = "black"
