[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpso"
authors = [
  { name="Filippo Airaldi", email="filippoairaldi@gmail.com" },
]
description = "Vectorized Particle Swarm Optimization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numba >= 0.57.1",
    "scipy >= 1.10.1",
    "typing_extensions >= 4.6.3",
]
keywords = [
    "optimization",
    "particle-swarm-optimization",
    "adaptive",
    "vectorization",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/FilippoAiraldi/vectorized-particle-swarm"
"Bug Tracker" = "https://github.com/FilippoAiraldi/vectorized-particle-swarm/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "vpso.__version__"}

[tool.black]
target-version = ["py39", "py310", "py311"]
color = true

[tool.isort]
profile = "black"
py_version = 39

[tool.mypy]
python_version = "3.9"
plugins = ["numpy.typing.mypy_plugin"]
exclude = ["tests"]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "numba.*",
    "vpso.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "examples/*",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
sort = "miss"
